# ffmpeg-3000

./: .gitignore  CMakeLists.txt  readme.md
capture_audio/: capture_audio.h  capture_audio_test.c  capture_audio_windows.c  readme.md
capture_screen/: capture_screen.c  capture_screen.h  capture_screen_linux.c  capture_screen_test.c  capture_screen_windows.c  readme.md  video_encode.c  video_scale.c
codec_audio/: audio_encode_test.c  audio_resample_test.c  audio_resample_test2.c  decode_audio.c  decode_audio.h  decode_audio_test.c  readme.md  simple_read_g711a_file_test.c
codec_video/: simple_read_h265_file_test.c  simple_read_h265_file_test2.c
dep/: readme.md
filter/: video_filter.c  video_filter.h  video_filter_test.c
muxing/: video_capture_mux_out_mp4.c
